--- a/Termeh.Api/Web.config
+++ b/Termeh.Api/Web.config
@@ -9,7 +9,7 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-JobTrack.Api-20140320154107;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-JobTrack.Api-20140320154107.mdf" />
+    <add name="JobTrackDbContext" connectionString="Data Source=.\sql2008;Initial Catalog=JobTrack;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
