--- a/Termeh.Api/packages.config
+++ b/Termeh.Api/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="AutoMapper" version="3.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net45" />
@@ -18,7 +20,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
-  <package id="structuremap" version="3.0.2.115" targetFramework="net45" />
+  <package id="ShortBus" version="2.0.16" targetFramework="net45" />
+  <package id="ShortBus.Markers" version="2.0.15" targetFramework="net45" />
+  <package id="structuremap" version="2.6.3" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
