Introducing AutoMapper for query projections

--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -167,6 +167,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\ApplicationConverterBootStrapper.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -191,9 +192,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Job\Job.cs" />
     <Compile Include="Models\Job\JobStatus.cs" />
-    <Compile Include="Models\Job\JobUser.cs" />
     <Compile Include="Models\Job\JobView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
