--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobController.cs" />
     <Compile Include="Controllers\JobTrackBaseController.cs" />
+    <Compile Include="Data\Context\Attachment.cs" />
     <Compile Include="Data\Context\User.cs" />
     <Compile Include="Data\Context\Job.cs" />
     <Compile Include="Data\Context\JobStatus.cs" />
@@ -192,6 +193,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Job\AttachmentView.cs" />
     <Compile Include="Models\Job\JobStatus.cs" />
     <Compile Include="Models\Job\JobView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
