Put Enity objs into Models folder/ change some namespaces

--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -177,20 +177,20 @@
     <Compile Include="Controllers\JobTrackBaseController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Data\Commands\AddJobCommand.cs" />
-    <Compile Include="Data\Context\Attachment.cs" />
-    <Compile Include="Data\Context\User.cs" />
-    <Compile Include="Data\Context\Job.cs" />
-    <Compile Include="Data\Context\JobStatus.cs" />
-    <Compile Include="Data\Commands\JobTrackDbContext.cs" />
-    <Compile Include="Data\Commands\SqlTablesInitializer.cs" />
-    <Compile Include="Data\Commands\TermehContextException.cs" />
+    <Compile Include="Data\Models\Attachment.cs" />
+    <Compile Include="Data\Models\User.cs" />
+    <Compile Include="Data\Models\Job.cs" />
+    <Compile Include="Data\Models\JobStatus.cs" />
+    <Compile Include="Data\Context\JobTrackDbContext.cs" />
+    <Compile Include="Data\Context\SqlTablesInitializer.cs" />
+    <Compile Include="Data\Context\TermehContextException.cs" />
     <Compile Include="Data\Commands\AddJobHandler.cs" />
     <Compile Include="Data\Commands\DeleteJobHandler.cs" />
     <Compile Include="Data\Commands\EditJobHandler.cs" />
     <Compile Include="Data\Queries\Job\IndexJobQuery.cs" />
     <Compile Include="Data\Queries\Job\IndexJobsHandler.cs" />
-    <Compile Include="Data\Queries\LogCommand.cs" />
-    <Compile Include="Data\Queries\LogCommandHandler.cs" />
+    <Compile Include="Data\Queries\Helpers\LogCommand.cs" />
+    <Compile Include="Data\Queries\Helpers\LogCommandHandler.cs" />
     <Compile Include="Data\Queries\Job\ShowJobsHandler.cs" />
     <Compile Include="Data\Queries\JobStatus\ShowJobStatusesQuery.cs" />
     <Compile Include="Data\Queries\User\ShowUsersHandler.cs" />
