--- a/Termeh.Api/packages.config
+++ b/Termeh.Api/packages.config
@@ -5,6 +5,8 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDb" version="2.0.0" targetFramework="net45" />
