Fix bugs: add config for ApplicationUser, fix jobDetails in jobCtrl.js

--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Data\Commands\AddJobAttachmentCommand.cs" />
     <Compile Include="Data\Commands\AddJobAttachmentHandler.cs" />
     <Compile Include="Data\Commands\AddJobCommand.cs" />
+    <Compile Include="Data\Context\IdentityUserConfiguration.cs" />
     <Compile Include="Data\Context\IdentityUserLoginConfiguration.cs" />
     <Compile Include="Data\Context\IdentityUserRoleConfiguration.cs" />
     <Compile Include="Data\Models\Attachment.cs" />
