--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -132,6 +132,7 @@
     <Content Include="Index.html" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\app\controllers\home\home.js" />
+    <Content Include="Scripts\app\controllers\jobs\jobAttachmentAdd.js" />
     <Content Include="Scripts\app\controllers\jobs\job.js" />
     <Content Include="Scripts\app\controllers\jobs\jobAttachments.js" />
     <Content Include="Scripts\app\controllers\jobs\jobEdit.js" />
@@ -156,6 +157,7 @@
     <Content Include="Scripts\app\services\users\user.js" />
     <Content Include="Scripts\app\views\about\About.html" />
     <Content Include="Scripts\app\views\home\Home.html" />
+    <Content Include="Scripts\app\views\jobAttachments\Add.html" />
     <Content Include="Scripts\app\views\jobs\Add.html" />
     <Content Include="Scripts\app\views\jobs\Details.html" />
     <Content Include="Scripts\app\views\jobs\Edit.html" />
