--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -190,8 +190,9 @@
     <Compile Include="Data\Context\IdentityUserConfiguration.cs" />
     <Compile Include="Data\Context\IdentityUserLoginConfiguration.cs" />
     <Compile Include="Data\Context\IdentityUserRoleConfiguration.cs" />
+    <Compile Include="Data\Context\JobConfiguration.cs" />
     <Compile Include="Data\Models\JobAttachment.cs" />
-    <Compile Include="Data\Models\ApplicationUser.cs" />
+    <Compile Include="Data\Models\TermehUser.cs" />
     <Compile Include="Data\Models\Job.cs" />
     <Compile Include="Data\Models\JobStatus.cs" />
     <Compile Include="Data\Context\JobTrackDbContext.cs" />
