--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -99,6 +99,8 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\themes\bootstrap\bootstrap-theme.min.css" />
+    <Content Include="Content\themes\bootstrap\bootstrap.min.css" />
     <Content Include="Content\themes\fonts\basic.icons.svg" />
     <Content Include="Content\themes\fonts\icons.svg" />
     <Content Include="Content\themes\images\loader-large-inverted.gif" />
@@ -174,10 +176,13 @@
     <Content Include="Scripts\libs\angular-ui\select2.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.min.js" />
+    <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls.js" />
     <Content Include="Scripts\libs\jquery-1.9.1.js" />
     <Content Include="Scripts\libs\jquery-ui-1.10.3.min.js" />
     <Content Include="Scripts\libs\select2\select2.js" />
     <Content Include="Scripts\libs\semantic\semantic.js" />
+    <Content Include="template\typeahead\typeahead-match.html" />
+    <Content Include="template\typeahead\typeahead-popup.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
