Intro ngEnter after selecting a job on search box

--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -146,6 +146,7 @@
     <Content Include="Scripts\app\directives\shared\jobAttachment.js" />
     <Content Include="Scripts\app\directives\shared\loadingoverlay.js" />
     <Content Include="Scripts\app\directives\shared\modal.js" />
+    <Content Include="Scripts\app\directives\shared\ngEnter.js" />
     <Content Include="Scripts\app\directives\shared\select2dropdown.js" />
     <Content Include="Scripts\app\directives\shared\topmenu.js" />
     <Content Include="Scripts\app\partials\Loader.html" />
