--- a/Termeh.Api.Test/Termeh.Api.Test.csproj
+++ b/Termeh.Api.Test/Termeh.Api.Test.csproj
@@ -71,6 +71,12 @@
     </Compile>
     <Compile Include="Scenarios\JobCreationSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenarios\JobGet.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JobGet.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Scenarios\JobGetSteps.cs" />
     <Compile Include="UnitTests\Job\WhenCreatingAJob.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +86,10 @@
       <LastGenOutput>JobCreation.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
+    <None Include="Scenarios\JobGet.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>JobGet.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Termeh.Api\Termeh.Api.csproj">
