Add GetJobs feature(Specflow) , fixing GetJob feature

--- a/Termeh.Api.Test/Termeh.Api.Test.csproj
+++ b/Termeh.Api.Test/Termeh.Api.Test.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scenarios\JobGetStepsWhenNull.cs" />
     <Compile Include="Scenarios\JobCreation.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
