Adding new unit tests for getting all users

--- a/Termeh.Api.Test/Termeh.Api.Test.csproj
+++ b/Termeh.Api.Test/Termeh.Api.Test.csproj
@@ -93,6 +93,7 @@
     </Compile>
     <Compile Include="Scenarios\JobGetSteps.cs" />
     <Compile Include="UnitTests\Job\WhenCreatingAJob.cs" />
+    <Compile Include="UnitTests\User\When_Getting_ListOfUsers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
