Fixing some bugs after upgrading to angularjs 1.3.4 ($locationProvider.html5Mode)

--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -163,16 +163,16 @@
     <Content Include="Scripts\app\views\jobs\List.html" />
     <Content Include="Scripts\app\views\shared\Error.html" />
     <Content Include="Scripts\config.js" />
-    <Content Include="Scripts\libs\angular-1.2.11.min.js" />
-    <Content Include="Scripts\libs\angular-animate-1.2.9.min.js" />
-    <Content Include="Scripts\libs\angular-cookies-1.2.9.js" />
-    <Content Include="Scripts\libs\angular-cookies-1.2.9.min.js" />
+    <Content Include="Scripts\libs\angular-animate.min.js" />
+    <Content Include="Scripts\libs\angular-cookies.min.js" />
     <Content Include="Scripts\libs\angular-resource-1.2.9.min.js" />
-    <Content Include="Scripts\libs\angular-route-1.2.9.min.js" />
+    <Content Include="Scripts\libs\angular-resource.min.js" />
+    <Content Include="Scripts\libs\angular-route.min.js" />
     <Content Include="Scripts\libs\angular-ui\select2.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.min.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls.js" />
+    <Content Include="Scripts\libs\angular.min.js" />
     <Content Include="Scripts\libs\jquery-1.9.1.js" />
     <Content Include="Scripts\libs\jquery-ui-1.10.3.min.js" />
     <Content Include="Scripts\libs\select2\select2.js" />
