--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -165,18 +165,16 @@
     <Content Include="Scripts\config.js" />
     <Content Include="Scripts\libs\angular-animate.min.js" />
     <Content Include="Scripts\libs\angular-cookies.min.js" />
-    <Content Include="Scripts\libs\angular-resource-1.2.9.min.js" />
     <Content Include="Scripts\libs\angular-resource.min.js" />
     <Content Include="Scripts\libs\angular-route.min.js" />
     <Content Include="Scripts\libs\angular-ui\select2.js" />
-    <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.js" />
-    <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.11.0.min.js" />
-    <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls.js" />
+    <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.12.0.min.js" />
     <Content Include="Scripts\libs\angular.min.js" />
     <Content Include="Scripts\libs\jquery-1.9.1.js" />
     <Content Include="Scripts\libs\jquery-ui-1.10.3.min.js" />
     <Content Include="Scripts\libs\select2\select2.js" />
     <Content Include="Scripts\libs\semantic\semantic.js" />
+    <Content Include="Scripts\libs\semantic\semantic.min.js" />
     <Content Include="template\typeahead\typeahead-match.html" />
     <Content Include="template\typeahead\typeahead-popup.html" />
     <Content Include="Web.config" />
