--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -173,6 +173,7 @@
     <Content Include="Scripts\libs\jquery-1.9.1.js" />
     <Content Include="Scripts\libs\jquery-ui-1.10.3.min.js" />
     <Content Include="Scripts\libs\select2\select2.js" />
+    <Content Include="Scripts\libs\select2\select2.min.js" />
     <Content Include="Scripts\libs\semantic\semantic.js" />
     <Content Include="Scripts\libs\semantic\semantic.min.js" />
     <Content Include="template\typeahead\typeahead-match.html" />
