--- a/Termeh.Api/Termeh.Api.csproj
+++ b/Termeh.Api/Termeh.Api.csproj
@@ -180,6 +180,7 @@
     <Compile Include="App_Start\ApplicationConverterBootStrapper.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\TermehAuthAttribute.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobAttachmentController.cs" />
