--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -144,6 +144,7 @@
     <Content Include="Scripts\app\directives\shared\datepicker.js" />
     <Content Include="Scripts\app\directives\shared\itemdelete.js" />
     <Content Include="Scripts\app\directives\shared\jobAttachment.js" />
+    <Content Include="Scripts\app\directives\shared\loadingoverlay.js" />
     <Content Include="Scripts\app\directives\shared\select2dropdown.js" />
     <Content Include="Scripts\app\directives\shared\topmenu.js" />
     <Content Include="Scripts\app\partials\Loader.html" />
