--- a/Termeh.Web/.bin/bower.json
+++ b/Termeh.Web/.bin/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "angularjs",
-  "version": "1.3.8",
+  "name": "termeh",
+  "version": "0.1.5",
   "main": "angular.js",
   "keywords": [
-    "globals"
+    "termeh"
   ],
   "license": "MIT",
   "ignore": [
@@ -11,5 +11,14 @@
     "node_modules",
 	"ui-select.js",
 	"semantic-ui.js"
-  ]
+  ],
+  "dependencies": { 
+     "angular": ">=1.2.18",
+	 "jquery": ">=2.1.3"	  
+   },
+  "devDependencies": {
+    "jquery": "~1.11",
+    "angular-sanitize": ">=1.2.18",
+    "angular-mocks": ">=1.2.18"
+  }
 }
