--- a/Termeh.Web/Termeh.Web.csproj
+++ b/Termeh.Web/Termeh.Web.csproj
@@ -168,6 +168,7 @@
     <Content Include="Scripts\libs\angular-cookies.min.js" />
     <Content Include="Scripts\libs\angular-resource.min.js" />
     <Content Include="Scripts\libs\angular-route.min.js" />
+    <Content Include="Scripts\libs\angular-sanitize.min.js" />
     <Content Include="Scripts\libs\angular-ui\ui-bootstrap-tpls-0.12.0.min.js" />
     <Content Include="Scripts\libs\angular.min.js" />
     <Content Include="Scripts\libs\jquery-1.9.1.js" />
@@ -211,6 +212,9 @@
     <None Include=".bin\bower.cmd" />
     <None Include=".bin\git.cmd" />
     <None Include=".bin\node.cmd" />
+    <Content Include="Scripts\libs\select2\select2.min.js.map">
+      <DependentUpon>select2.js</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
