--- a/Termeh.Web/.bin/bower.json
+++ b/Termeh.Web/.bin/bower.json
@@ -8,10 +8,13 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "node_modules",
+    "node_modules"
   ],
   "dependencies": { 
      "angular": ">=1.2.18",
+     "angular-route": ">=1.2.18",
+     "angular-animate": ">=1.2.18",
+     "angular-ui-bootstrap" : "=0.12.0",
 	 "jquery": ">=2.1.3"	  
    },
   "devDependencies": {
