--- a/Termeh.Web/.bin/bower.json
+++ b/Termeh.Web/.bin/bower.json
@@ -15,6 +15,8 @@
      "angular-route": ">=1.2.18",
      "angular-animate": ">=1.2.18",
      "angular-ui-bootstrap" : "=0.12.0",
+     "angular-ui/ui-select" : "=0.12.0",
+	 "Semantic-UI" : "=0.12.0",
 	 "jquery": ">=2.1.3"	  
    },
   "devDependencies": {
